src/objects/Training_Event__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Participation_Hours__c</fullName>
        <inlineHelpText>The number of training hours attendees received for attending the Training Event. Field defaults to the Training Event Length value but can be edited.</inlineHelpText>
        <label>Actual Participation Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attendee_Type__c</fullName>
        <label>Attendee Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employee</fullName>
                    <default>true</default>
                    <label>Employee</label>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendee__c</fullName>
        <label>Attendee</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Contacts with a &quot;WEX User Contact&quot; Record Type can be selected.</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>WEX User Contact</value>
            </filterItems>
            <infoMessage>Only Contacts with a &quot;WEX User Contact&quot; Record Type can be selected.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Training Events</relationshipLabel>
        <relationshipName>Training_Attended</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Attended__c</fullName>
        <formula>Training_Class_Number__r.Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Attended</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level_1_Reaction__c</fullName>
        <inlineHelpText>Survey Score</inlineHelpText>
        <label>Level 1 - Reaction</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_2_Learning__c</fullName>
        <inlineHelpText>Assessment Score</inlineHelpText>
        <label>Level 2 - Learning</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_3_Application__c</fullName>
        <inlineHelpText>70-Day Pulse Check Score; Manager coaching</inlineHelpText>
        <label>Level 3 - Application</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_4_Business_Impact__c</fullName>
        <label>Level 4 - Business Impact</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Participation_Type__c</fullName>
        <label>Participation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Classroom</fullName>
                </value>
                <value>
                    <fullName>Classroom &amp; Virtual</fullName>
                    <default>true</default>
                    <label>Classroom &amp; Virtual</label>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Self-directed</fullName>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Class_Name__c</fullName>
        <formula>Training_Class_Number__r.Class_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Class Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Class_Number__c</fullName>
        <label>Training Class Number</label>
        <referenceTo>Training_Class__c</referenceTo>
        <relationshipLabel>Training Events</relationshipLabel>
        <relationshipName>Attendee_List</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Training Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Training_Class_Number__c</columns>
        <columns>Training_Class_Name__c</columns>
        <columns>Attendee__c</columns>
        <columns>Date_Attended__c</columns>
        <columns>NAME</columns>
        <columns>Actual_Participation_Hours__c</columns>
        <columns>Score__c</columns>
        <columns>Participation_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>Global_Training_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Training_Events_to_Update</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Attendee__c</columns>
        <columns>Actual_Participation_Hours__c</columns>
        <columns>Training_Class_Name__c</columns>
        <columns>Training_Class_Number__c</columns>
        <columns>Participation_Type__c</columns>
        <columns>Attendee_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Actual_Participation_Hours__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Participation_Type__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Training Events to Update</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Copy_of_Phase_II_Attendees</fullName>
        <columns>Training_Class_Name__c</columns>
        <columns>Attendee__c</columns>
        <columns>Level_2_Learning__c</columns>
        <columns>Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Training_Class_Name__c</field>
            <operation>equals</operation>
            <value>Learning Plan Phase II - Product Overview Corporate Payments</value>
        </filters>
        <label>Learning Plan - Phase II Attendees</label>
        <sharedTo>
            <role>LearningandDevelopment</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Feb_2019_Sales_Onboarding_Events</fullName>
        <columns>NAME</columns>
        <columns>Attendee__c</columns>
        <columns>Date_Attended__c</columns>
        <columns>Actual_Participation_Hours__c</columns>
        <columns>Participation_Type__c</columns>
        <columns>Training_Class_Name__c</columns>
        <columns>Training_Class_Number__c</columns>
        <columns>Score__c</columns>
        <columns>Level_1_Reaction__c</columns>
        <columns>Level_2_Learning__c</columns>
        <columns>Level_3_Application__c</columns>
        <columns>Level_4_Business_Impact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Training_Class_Number__c</field>
            <operation>equals</operation>
            <value>Class-0009</value>
        </filters>
        <label>Feb 2019 Sales Onboarding Events</label>
        <language>en_US</language>
        <sharedTo>
            <group>Global_Sales_Operations</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Learning_Plan_Phase_III_Attendees</fullName>
        <columns>Training_Class_Name__c</columns>
        <columns>Attendee__c</columns>
        <columns>Level_2_Learning__c</columns>
        <columns>Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Training_Class_Name__c</field>
            <operation>equals</operation>
            <value>Learning Plan Phase III - Salesforce Basics (Lightning)</value>
        </filters>
        <label>Learning Plan - Phase III Attendees</label>
        <sharedTo>
            <role>LearningandDevelopment</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Learning_Plan_Phase_I_No_Score</fullName>
        <columns>Training_Class_Name__c</columns>
        <columns>Attendee__c</columns>
        <columns>Level_2_Learning__c</columns>
        <columns>Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Training_Class_Name__c</field>
            <operation>equals</operation>
            <value>Learning Plan Phase I - General Audience</value>
        </filters>
        <filters>
            <field>Score__c</field>
            <operation>equals</operation>
        </filters>
        <label>Learning Plan - Phase I No Score</label>
        <sharedTo>
            <role>LearningandDevelopment</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>March_2019_Sales_Onboarding_Events</fullName>
        <columns>NAME</columns>
        <columns>Attendee__c</columns>
        <columns>Date_Attended__c</columns>
        <columns>Actual_Participation_Hours__c</columns>
        <columns>Participation_Type__c</columns>
        <columns>Training_Class_Name__c</columns>
        <columns>Training_Class_Number__c</columns>
        <columns>Score__c</columns>
        <columns>Level_1_Reaction__c</columns>
        <columns>Level_2_Learning__c</columns>
        <columns>Level_3_Application__c</columns>
        <columns>Level_4_Business_Impact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Training_Class_Name__c</field>
            <operation>contains</operation>
            <value>March</value>
        </filters>
        <label>March 2019 Sales Onboarding Events</label>
        <language>en_US</language>
        <sharedTo>
            <group>Global_Sales_Operations</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Training_Events</fullName>
        <columns>NAME</columns>
        <columns>Attendee__c</columns>
        <columns>Actual_Participation_Hours__c</columns>
        <columns>Training_Class_Name__c</columns>
        <columns>Training_Class_Number__c</columns>
        <columns>Participation_Type__c</columns>
        <columns>Score__c</columns>
        <columns>Level_1_Reaction__c</columns>
        <columns>Level_2_Learning__c</columns>
        <columns>Level_3_Application__c</columns>
        <columns>Level_4_Business_Impact__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>My Training Events created this week</label>
        <language>en_US</language>
        <sharedTo>
            <group>CSI_Global_Fleet_Partner_Group</group>
            <group>Global_Sales_Operations</group>
            <group>Global_Training_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Training_Events_Created_today</fullName>
        <columns>NAME</columns>
        <columns>Attendee__c</columns>
        <columns>Actual_Participation_Hours__c</columns>
        <columns>Training_Class_Name__c</columns>
        <columns>Training_Class_Number__c</columns>
        <columns>Participation_Type__c</columns>
        <columns>Score__c</columns>
        <columns>Level_1_Reaction__c</columns>
        <columns>Level_2_Learning__c</columns>
        <columns>Level_3_Application__c</columns>
        <columns>Level_4_Business_Impact__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>My Training Events Created Today</label>
        <sharedTo>
            <role>LearningandDevelopment</role>
            <role>Support_Operations</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Training_Events_to_modify_add_class</fullName>
        <columns>NAME</columns>
        <columns>Attendee__c</columns>
        <columns>Actual_Participation_Hours__c</columns>
        <columns>Training_Class_Name__c</columns>
        <columns>Training_Class_Number__c</columns>
        <columns>Participation_Type__c</columns>
        <columns>Score__c</columns>
        <columns>Level_1_Reaction__c</columns>
        <columns>Level_2_Learning__c</columns>
        <columns>Level_3_Application__c</columns>
        <columns>Level_4_Business_Impact__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Training_Class_Name__c</field>
            <operation>contains</operation>
            <value>Integrity Coaching</value>
        </filters>
        <label>My Training Events to modify (add class)</label>
        <sharedTo>
            <group>CSI_Global_Fleet_Partner_Group</group>
            <group>Global_Sales_Operations</group>
            <group>Global_Training_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Phase_I_Attendees</fullName>
        <columns>Training_Class_Name__c</columns>
        <columns>Attendee__c</columns>
        <columns>Level_2_Learning__c</columns>
        <columns>Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Training_Class_Name__c</field>
            <operation>equals</operation>
            <value>Learning Plan Phase I - General Audience</value>
        </filters>
        <label>Learning Plan - Phase I Attendees</label>
        <sharedTo>
            <role>LearningandDevelopment</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TE-{0000000}</displayFormat>
        <label>Training Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>